<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_validation"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".presentation.ui.activities.MainActivity"
    android:clickable="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="127dp"
            android:layout_height="127dp"
            android:layout_above="@+id/etNama"

            android:layout_gravity="center"
            android:layout_marginBottom="35dp"
            android:background="@drawable/login_icon"
            android:src="@drawable/btn_add_photo"
            android:layout_marginTop="35dp" />

        <EditText

            android:id="@+id/etNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnNext"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Masukkan nama"
            android:inputType="textPersonName"
            android:layout_gravity="center"
            android:autoText="false"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:theme="@style/LoginEditText" />


        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnHome"

            android:layout_gravity="center"
            android:background="@drawable/btn_login_selector"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_sub"
        android:id="@+id/textView3"
        android:textColor="@android:color/white"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:textAlignment="center" />
</RelativeLayout>
